<?xml version="1.0"?>
<package>
  <name>agast</name>
  <version>0.0.0</version>
  <description>The agast package</description>

  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <license>New BSD</license>

  <author email="elmar.mair@dlr.de">Elmar Mair</author>

  <build_depend>roscpp</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>glog_catkin</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>opencv</run_depend>
    
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
