<?xml version="1.0"?>
<package format="2">
  <name>agast</name>
  <version>0.0.0</version>
  <description>The agast package</description>

  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <license>New BSD</license>

  <author email="elmar.mair@dlr.de">Elmar Mair</author>

  <depend>roscpp</depend>
  <depend>opencv2_catkin</depend>
  <depend>glog_catkin</depend>
    
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
