<?xml version="1.0"?>
<package>
  <name>brisk</name>
  <version>2.0.0</version>
  <description>The brisk package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="lestefan@ethz.ch">Stefan Leutenegger</maintainer>

  <license>New BSD</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="lestefan@ethz.ch">Stefan Leutenegger</author>
  <author email="slynen@ethz.ch">Simon Lynen</author>

  <build_depend>agast</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>features_2d_helpers</build_depend>
  <build_depend>glog_catkin</build_depend>
  
  <run_depend>agast</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>features_2d_helpers</run_depend>
  <run_depend>glog_catkin</run_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>redwood_catkin</buildtool_depend>
</package>
