<?xml version="1.0"?>
<package>
  <name>brisk</name>
  <version>2.0.0</version>
  <description>The brisk lib</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="lestefan@ethz.ch">Stefan Leutenegger</maintainer>

  <license>New BSD</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="lestefan@ethz.ch">Stefan Leutenegger</author>
  <author email="slynen@ethz.ch">Simon Lynen</author>

  <build_depend>agast</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>glog</build_depend>
  
  <run_depend>agast</run_depend>
  <run_depend>gtest</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>opencv</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>glog</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
